<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="356dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card1"
        app:layout_constraintBottom_toTopOf="@+id/txtname"
        app:layout_constraintStart_toStartOf="@+id/txtname"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/card01"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card2"
        app:layout_constraintBottom_toTopOf="@+id/txtcard"
        app:layout_constraintStart_toStartOf="@+id/txtcard"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

    <EditText
        android:id="@+id/txtcard"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/card02"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card3"
        app:layout_constraintBottom_toTopOf="@+id/txtmonth"
        app:layout_constraintStart_toStartOf="@+id/txtmonth"
        app:layout_constraintTop_toBottomOf="@+id/txtcard" />

    <EditText
        android:id="@+id/txtyear"
        android:layout_width="73dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:ems="10"
        android:hint="YYYY"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toBottomOf="@+id/txtmonth"
        app:layout_constraintStart_toEndOf="@+id/txtmonth"
        app:layout_constraintTop_toTopOf="@+id/txtmonth"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtmonth"
        android:layout_width="62dp"
        android:layout_height="39dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:ems="10"
        android:hint="MM"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card6"
        app:layout_constraintBottom_toTopOf="@+id/txtcvc"
        app:layout_constraintStart_toStartOf="@+id/txtcvc"
        app:layout_constraintTop_toBottomOf="@+id/txtmonth" />

    <EditText
        android:id="@+id/txtcvc"
        android:layout_width="67dp"
        android:layout_height="38dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/card6"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn01"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPay"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn"
        android:backgroundTint="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/btn02"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg02"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/txtcvc"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/txttotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:layout_editor_absoluteX="146dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>