<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVehicleActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_img"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/addPhoto_btn"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/vehicle_size"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            android:entries="@array/Vehicle_size"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:padding="16dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/brand"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:inputType="text"
            android:padding="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/passengers"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            android:entries="@array/Passengers"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/bags"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            android:entries="@array/Bags"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/transmission"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            android:entries="@array/Transmission"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/fuel"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:padding="16dp"
            android:entries="@array/Fuel"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:padding="20dp"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/addVehicle_btn"/>

    </LinearLayout>
</ScrollView>