<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="wrap_content"
android:id="@+id/parent_layout" android:background="@drawable/border_line"
android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/vehicle_img"
        android:layout_width="132dp"
        android:layout_height="153dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/vehicle_transmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="86dp"
        android:layout_toEndOf="@+id/vehicle_img"
        android:layout_toRightOf="@id/vehicle_img"
        android:text="@string/transmission"
        android:textColor="#686666"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vehicle_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="86dp"
        android:layout_toEndOf="@+id/vehicle_img"
        android:layout_toRightOf="@id/vehicle_img"
        android:text="@string/price"
        android:textColor="#686666"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vehicle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/vehicle_img"
        android:text="@string/model"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>